spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -54,4 +54,5 @@
   text-align: center;
   margin-top: 20px;
   margin-right: 100px;
+  margin-left: 200px;
 }
